// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChallengeDetailsModal should render with setup 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeDetails
    challengeType="brisk walk"
    duration="10 mins"
    milestones={
      Array [
        Object {
          "reward": 1,
          "target": 100,
        },
      ]
    }
    onPressClose={[MockFunction]}
    onPressCta={[MockFunction]}
    onPressSetUp={[MockFunction]}
    unit="steps"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Close
          onPress={[MockFunction]}
        />,
        <Component
          source={
            Object {
              "testUri": "../../../assets/challenge-details/squirrel.png",
            }
          }
          style={
            Object {
              "marginTop": -100,
            }
          }
        />,
        <View
          style={
            Object {
              "backgroundColor": "rgb(237, 251, 248)",
              "padding": 40,
              "width": 570,
            }
          }
        >
          <YuText
            bold={true}
            style={
              Object {
                "color": "rgb(51,51,51)",
                "fontSize": 50,
                "marginBottom": 20,
              }
            }
          >
            brisk walk / 10 mins
          </YuText>
          <Milestones
            milestones={
              Array [
                Object {
                  "reward": 1,
                  "target": 100,
                },
              ]
            }
            unit="steps"
          />
        </View>,
        <Button
          disabled={false}
          label="take challenge"
          onPress={[MockFunction]}
          type="Primary"
          wrapperStyle={
            Object {
              "marginTop": -8,
            }
          }
        />,
        <Button
          label="set up tutorial"
          onPress={[MockFunction]}
          type="Secondary"
          wrapperStyle={
            Object {
              "marginTop": 30,
            }
          }
        />,
        null,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255,255,255,0.7)",
        "flex": 1,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "source": Object {
            "testUri": "../../../assets/challenge-details/squirrel.png",
          },
          "style": Object {
            "marginTop": -100,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <YuText
              bold={true}
              style={
                Object {
                  "color": "rgb(51,51,51)",
                  "fontSize": 50,
                  "marginBottom": 20,
                }
              }
            >
              brisk walk / 10 mins
            </YuText>,
            <Milestones
              milestones={
                Array [
                  Object {
                    "reward": 1,
                    "target": 100,
                  },
                ]
              }
              unit="steps"
            />,
          ],
          "style": Object {
            "backgroundColor": "rgb(237, 251, 248)",
            "padding": 40,
            "width": 570,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bold": true,
              "children": "brisk walk / 10 mins",
              "style": Object {
                "color": "rgb(51,51,51)",
                "fontSize": 50,
                "marginBottom": 20,
              },
            },
            "ref": null,
            "rendered": "brisk walk / 10 mins",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "milestones": Array [
                Object {
                  "reward": 1,
                  "target": 100,
                },
              ],
              "unit": "steps",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "disabled": false,
          "label": "take challenge",
          "onPress": [MockFunction],
          "type": "Primary",
          "wrapperStyle": Object {
            "marginTop": -8,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "label": "set up tutorial",
          "onPress": [MockFunction],
          "type": "Secondary",
          "wrapperStyle": Object {
            "marginTop": 30,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Close
            onPress={[MockFunction]}
          />,
          <Component
            source={
              Object {
                "testUri": "../../../assets/challenge-details/squirrel.png",
              }
            }
            style={
              Object {
                "marginTop": -100,
              }
            }
          />,
          <View
            style={
              Object {
                "backgroundColor": "rgb(237, 251, 248)",
                "padding": 40,
                "width": 570,
              }
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "color": "rgb(51,51,51)",
                  "fontSize": 50,
                  "marginBottom": 20,
                }
              }
            >
              brisk walk / 10 mins
            </YuText>
            <Milestones
              milestones={
                Array [
                  Object {
                    "reward": 1,
                    "target": 100,
                  },
                ]
              }
              unit="steps"
            />
          </View>,
          <Button
            disabled={false}
            label="take challenge"
            onPress={[MockFunction]}
            type="Primary"
            wrapperStyle={
              Object {
                "marginTop": -8,
              }
            }
          />,
          <Button
            label="set up tutorial"
            onPress={[MockFunction]}
            type="Secondary"
            wrapperStyle={
              Object {
                "marginTop": 30,
              }
            }
          />,
          null,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "rgba(255,255,255,0.7)",
          "flex": 1,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": Object {
              "testUri": "../../../assets/challenge-details/squirrel.png",
            },
            "style": Object {
              "marginTop": -100,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <YuText
                bold={true}
                style={
                  Object {
                    "color": "rgb(51,51,51)",
                    "fontSize": 50,
                    "marginBottom": 20,
                  }
                }
              >
                brisk walk / 10 mins
              </YuText>,
              <Milestones
                milestones={
                  Array [
                    Object {
                      "reward": 1,
                      "target": 100,
                    },
                  ]
                }
                unit="steps"
              />,
            ],
            "style": Object {
              "backgroundColor": "rgb(237, 251, 248)",
              "padding": 40,
              "width": 570,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "brisk walk / 10 mins",
                "style": Object {
                  "color": "rgb(51,51,51)",
                  "fontSize": 50,
                  "marginBottom": 20,
                },
              },
              "ref": null,
              "rendered": "brisk walk / 10 mins",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "milestones": Array [
                  Object {
                    "reward": 1,
                    "target": 100,
                  },
                ],
                "unit": "steps",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "disabled": false,
            "label": "take challenge",
            "onPress": [MockFunction],
            "type": "Primary",
            "wrapperStyle": Object {
              "marginTop": -8,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "set up tutorial",
            "onPress": [MockFunction],
            "type": "Secondary",
            "wrapperStyle": Object {
              "marginTop": 30,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`ChallengeDetailsModal should render without setup 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChallengeDetails
    challengeType="brisk walk"
    duration="10 mins"
    milestones={
      Array [
        Object {
          "reward": 1,
          "target": 100,
        },
      ]
    }
    onPressClose={[MockFunction]}
    onPressCta={[MockFunction]}
    unit="steps"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Close
          onPress={[MockFunction]}
        />,
        <Component
          source={
            Object {
              "testUri": "../../../assets/challenge-details/squirrel.png",
            }
          }
          style={
            Object {
              "marginTop": -100,
            }
          }
        />,
        <View
          style={
            Object {
              "backgroundColor": "rgb(237, 251, 248)",
              "padding": 40,
              "width": 570,
            }
          }
        >
          <YuText
            bold={true}
            style={
              Object {
                "color": "rgb(51,51,51)",
                "fontSize": 50,
                "marginBottom": 20,
              }
            }
          >
            brisk walk / 10 mins
          </YuText>
          <Milestones
            milestones={
              Array [
                Object {
                  "reward": 1,
                  "target": 100,
                },
              ]
            }
            unit="steps"
          />
        </View>,
        <Button
          disabled={false}
          label="take challenge"
          onPress={[MockFunction]}
          type="Primary"
          wrapperStyle={
            Object {
              "marginTop": -8,
            }
          }
        />,
        <YuText
          style={
            Object {
              "color": "rgb(170,170,170)",
              "fontSize": 32,
              "marginTop": 48,
            }
          }
        >
          
        </YuText>,
        null,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255,255,255,0.7)",
        "flex": 1,
        "justifyContent": "center",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "source": Object {
            "testUri": "../../../assets/challenge-details/squirrel.png",
          },
          "style": Object {
            "marginTop": -100,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <YuText
              bold={true}
              style={
                Object {
                  "color": "rgb(51,51,51)",
                  "fontSize": 50,
                  "marginBottom": 20,
                }
              }
            >
              brisk walk / 10 mins
            </YuText>,
            <Milestones
              milestones={
                Array [
                  Object {
                    "reward": 1,
                    "target": 100,
                  },
                ]
              }
              unit="steps"
            />,
          ],
          "style": Object {
            "backgroundColor": "rgb(237, 251, 248)",
            "padding": 40,
            "width": 570,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bold": true,
              "children": "brisk walk / 10 mins",
              "style": Object {
                "color": "rgb(51,51,51)",
                "fontSize": 50,
                "marginBottom": 20,
              },
            },
            "ref": null,
            "rendered": "brisk walk / 10 mins",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "milestones": Array [
                Object {
                  "reward": 1,
                  "target": 100,
                },
              ],
              "unit": "steps",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "disabled": false,
          "label": "take challenge",
          "onPress": [MockFunction],
          "type": "Primary",
          "wrapperStyle": Object {
            "marginTop": -8,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "",
          "style": Object {
            "color": "rgb(170,170,170)",
            "fontSize": 32,
            "marginTop": 48,
          },
        },
        "ref": null,
        "rendered": "",
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Close
            onPress={[MockFunction]}
          />,
          <Component
            source={
              Object {
                "testUri": "../../../assets/challenge-details/squirrel.png",
              }
            }
            style={
              Object {
                "marginTop": -100,
              }
            }
          />,
          <View
            style={
              Object {
                "backgroundColor": "rgb(237, 251, 248)",
                "padding": 40,
                "width": 570,
              }
            }
          >
            <YuText
              bold={true}
              style={
                Object {
                  "color": "rgb(51,51,51)",
                  "fontSize": 50,
                  "marginBottom": 20,
                }
              }
            >
              brisk walk / 10 mins
            </YuText>
            <Milestones
              milestones={
                Array [
                  Object {
                    "reward": 1,
                    "target": 100,
                  },
                ]
              }
              unit="steps"
            />
          </View>,
          <Button
            disabled={false}
            label="take challenge"
            onPress={[MockFunction]}
            type="Primary"
            wrapperStyle={
              Object {
                "marginTop": -8,
              }
            }
          />,
          <YuText
            style={
              Object {
                "color": "rgb(170,170,170)",
                "fontSize": 32,
                "marginTop": 48,
              }
            }
          >
            
          </YuText>,
          null,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "rgba(255,255,255,0.7)",
          "flex": 1,
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": Object {
              "testUri": "../../../assets/challenge-details/squirrel.png",
            },
            "style": Object {
              "marginTop": -100,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <YuText
                bold={true}
                style={
                  Object {
                    "color": "rgb(51,51,51)",
                    "fontSize": 50,
                    "marginBottom": 20,
                  }
                }
              >
                brisk walk / 10 mins
              </YuText>,
              <Milestones
                milestones={
                  Array [
                    Object {
                      "reward": 1,
                      "target": 100,
                    },
                  ]
                }
                unit="steps"
              />,
            ],
            "style": Object {
              "backgroundColor": "rgb(237, 251, 248)",
              "padding": 40,
              "width": 570,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": "brisk walk / 10 mins",
                "style": Object {
                  "color": "rgb(51,51,51)",
                  "fontSize": 50,
                  "marginBottom": 20,
                },
              },
              "ref": null,
              "rendered": "brisk walk / 10 mins",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "milestones": Array [
                  Object {
                    "reward": 1,
                    "target": 100,
                  },
                ],
                "unit": "steps",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "disabled": false,
            "label": "take challenge",
            "onPress": [MockFunction],
            "type": "Primary",
            "wrapperStyle": Object {
              "marginTop": -8,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "",
            "style": Object {
              "color": "rgb(170,170,170)",
              "fontSize": 32,
              "marginTop": 48,
            },
          },
          "ref": null,
          "rendered": "",
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
